RESOLVED FIXED55651
[Qt] fast/canvas/canvas-strokePath-gradient-shadow.html fails
https://bugs.webkit.org/show_bug.cgi?id=55651
Summary [Qt] fast/canvas/canvas-strokePath-gradient-shadow.html fails
Helder Correia
Reported 2011-03-02 22:59:03 PST
When relying on ContextShadow and using a gradient stroke, the alpha of the shadow is incorrect.
Attachments
Patch (3.64 KB, patch)
2011-03-02 23:03 PST, Helder Correia
kling: review+
Helder Correia
Comment 1 2011-03-02 23:03:12 PST
Andreas Kling
Comment 2 2011-03-03 03:35:12 PST
Comment on attachment 84521 [details] Patch LGTM.
Helder Correia
Comment 3 2011-03-03 09:46:35 PST
Note You need to log in before you can comment on or make changes to this bug.