[Qt] fast/canvas/canvas-strokePath-gradient-shadow.html fails https://bugs.webkit.org/show_bug.cgi?id=55651

Reviewed by Andreas Kling.

When relying on ContextShadow and using a gradient stroke for a path,
the alpha of the shadow is incorrect.

Source/WebCore:

* platform/graphics/qt/GraphicsContextQt.cpp:
(WebCore::GraphicsContext::strokePath):

LayoutTests:

* platform/qt/Skipped: Remove test from skipped list.

Canonical link: https://commits.webkit.org/70145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80250 268f45cc-cd09-0410-ab3c-d52691b4dbfc